--- a/package.json
+++ b/package.json
@@ -20,12 +20,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "body-parser": "^1.18.2",
+    "connect-mongo": "^2.0.1",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.0.7",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.16.8",
+    "@types/connect-mongo": "^0.0.35",
+    "@types/dotenv": "^4.0.2",
     "@types/express": "^4.11.1",
+    "@types/express-session": "^1.15.8",
+    "@types/jest": "^22.1.3",
+    "@types/mongodb": "^3.0.5",
+    "@types/mongoose": "^4.7.34",
+    "@types/node": "^9.4.6",
+    "@types/passport": "^0.4.3",
+    "@types/passport-local": "^1.0.32",
     "jest": "^22.4.2",
+    "nodemon": "^1.15.1",
     "ts-jest": "^22.4.0",
+    "ts-node": "^5.0.0",
+    "tslint": "^5.9.1",
     "typescript": "^2.7.2"
   }
 }
