--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run build-ts",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "test": "jest --forceExit --coverage --verbose",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
@@ -41,6 +41,7 @@
     "@types/node": "^9.4.6",
     "@types/passport": "^0.4.3",
     "@types/passport-local": "^1.0.32",
+    "concurrently": "^3.5.1",
     "jest": "^22.4.2",
     "nodemon": "^1.15.1",
     "ts-jest": "^22.4.0",
