--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "connect-mongo": "^2.0.1",
     "dotenv": "^5.0.1",
@@ -30,6 +31,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt-nodejs": "0.0.30",
     "@types/body-parser": "^1.16.8",
     "@types/connect-mongo": "^0.0.35",
     "@types/dotenv": "^4.0.2",
