--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "express-validator": "^5.0.2",
     "mongoose": "^5.0.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
