--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/cors": "^2.8.3",
     "@types/request": "^2.47.0",
+    "@types/socket.io": "^1.4.32",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "connect-mongo": "^2.0.1",
@@ -33,7 +34,8 @@
     "mongoose": "^5.0.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "@types/bcrypt-nodejs": "0.0.30",
